--- a/src/app/board-of-directors/board-of-directors.html
+++ b/src/app/board-of-directors/board-of-directors.html
@@ -21,9 +21,9 @@
       <div ng-style="{'visibility': fetchDataInProgress ? 'hidden':'visible'}">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-repeat="member in team" ng-if="$index % 2 == 0" >
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" >
-					<uib-accordion>
-						<uib-accordion-group class="team-accordion-group">
-							<uib-accordion-heading>
+					<!-- <uib-accordion> -->
+						<div class="team-accordion-group">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
 								<a href="" class="thumbnail">
 						      <img src="../assets/images/avtar.png" alt="Team Picture">
 						    </a>
@@ -41,17 +41,16 @@
 										<i class="fa fa-twitter"></i>
 									</a>
 								</div>
-								<br>
-								<br>
-							</uib-accordion-heading>
-              <div ng-bind-html="team[$index].Description"></div>
-						</uib-accordion-group>
-					</uib-accordion>
+							</div>
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 team-description" ng-bind-html="team[$index].Description"></div>
+						</div>
+					<!-- </uib-accordion> -->
 				</div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider-bottom separator visible-sm visible-xs"></div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" ng-if="team[$index + 1]">
-          <uib-accordion>
-            <uib-accordion-group class="team-accordion-group">
-              <uib-accordion-heading>
+          <!-- <uib-accordion> -->
+            <div class="team-accordion-group">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                 <a href="" class="thumbnail">
                   <img src="../assets/images/avtar.png" alt="Team Picture">
                 </a>
@@ -69,14 +68,13 @@
                     <i class="fa fa-twitter"></i>
                   </a>
                 </div>
-                <br>
-                <br>
-              </uib-accordion-heading>
-              <div ng-bind-html="team[$index + 1].Description"></div>
-            </uib-accordion-group>
-          </uib-accordion>
+              </div>
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 team-description" ng-bind-html="team[$index + 1].Description"></div>
+            </div>
+          <!-- </uib-accordion> -->
         </div>
-          </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider-bottom separator"></div>
+      </div>
 
 			</div>
 		</div>
