--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -102,12 +102,12 @@
         <div class="cart_menu" ng-if="userObj">
           <ul>
             <li>
-              <a ui-sref="hm.dashboard.main" class="marker" title="Dashboard">
+              <a ui-sref="hm.dashboard.main" class="marker" title="Dashboard" ng-class="{'no-count': !cartCount}">
                 <i class="fa fa-tachometer fa-2x marker"></i>
               </a>
             </li>
             <li>
-              <a ui-sref="hm.cart.details" class="marker" title="Cart">
+              <a ui-sref="hm.cart.details" class="marker" title="Cart" ng-class="{'no-count': !cartCount}">
                 <i class="fa fa-shopping-cart fa-2x marker"></i>
                 <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
               </a>
