--- a/src/app/order-history/order-history.html
+++ b/src/app/order-history/order-history.html
@@ -3,10 +3,10 @@
   <article class="main-cantain">
     <div class="container" cg-busy="ordersPromise">
       <!-- START  My Orders  -->
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_job_tit nopadding-xs">
-        My Account/ My Orders
-        <hr class="order-hr">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 my-bottm-line dash_board_tit manage_job_tit_small">
+        <a href="" class="dash_board_light invoice-no">My Account </a> <i class="fa fa-chevron-right icon-text color-blue"></i> <span class="dash_board_bold">My Orders</span>
       </div>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_job_tit order-history-acc nopadding-xs">
         <div>
         <!-- web accordion -->
