--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -1,4 +1,4 @@
-<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12" cg-busy="quotationPromise">
   <div>
   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
     Quotation
@@ -53,7 +53,7 @@
         Go back to add products first
       </button>
     </div>
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-show="!flags.noQuotations" cg-busy="quotationPromise">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-show="!flags.noQuotations">
     <table class="table quotes-table">
       <thead>
       <tr>
