--- a/src/app/requests/requests.html
+++ b/src/app/requests/requests.html
@@ -5,17 +5,56 @@
 		<service-requests></service-requests>
 	</div> -->
 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
-			Requests
+		Requests
 	</div>
 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit job-site-list">
+		<i class="fa fa-filter marker pull-right heading-text search-filter-icon" ng-click="filter()"></i>
 		<i class="fa fa-search marker pull-right heading-text search-filter-icon" ng-click="search()"></i>
-		<div class="form-control search-div quotes-search hidden-xs" ng-class="{'searchShow jobsite-search-show': showSearch}">
-			<input type="text" placeholder="Request Id">
+		<div class="form-control search-div quotes-search hidden-xs" ng-class="{'searchShow': showSearch}">
+			<input type="text" placeholder="Contract Id">
+		</div>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box search-box-xs job-site-list quotes-filter-div search-arrow-box" ng-class="{'search-show': showSearch}">
+		<div class="form-control search-div quotes-search searchShow">
+			<input type="text" placeholder="Contract Id">
+		</div>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box job-site-list quotes-filter-div filter-arrow-box" ng-class="{'filter-show': showFilterDiv}">
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+			<p class="desc-text">From Date</p>
+			<div class="form-control search-div select-date" ng-click="openDatepicker('from')">
+				<input type="text" placeholder="dd/mm/yyyy" datepicker-popup ng-model="from" is-open="queryFormData.from">
+				<i class="fa fa-calendar"></i>
+			</div>
+		</div>
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+			<p class="desc-text">To Date</p>
+			<div class="form-control search-div select-date" ng-click="openDatepicker('to')">
+				<input type="text" placeholder="dd/mm/yyyy" datepicker-popup ng-model="to"  is-open="queryFormData.to">
+				<i class="fa fa-calendar"></i>
+			</div>
+		</div>
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+			<p class="desc-text">Contract</p>
+			<div class="form-control search-div select-date">
+				<input type="text" placeholder="Enter Contract Keyword" ng-model="jobsite">
+				<i class="fa fa-marker"></i>
+			</div>
+		</div>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 site-btn-div text-right devider">
+			<button class="btn sign_mybtn all-btn primary-btn filter-btns">Apply</button>
+			<button class="btn sign_mybtn all-btn primary-btn filter-btns" ng-click="reset()">Reset</button>
 		</div>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active nopadding">
-		<table class="table quotes-table open-contract-table">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col manage-jobsite-btn-col">
+		<button class="btn btn-default pull-left manage-job-btn deactivate list list-view-btn all-btn" ng-class="{'active primary-btn' : !params.serviceRequest}" ng-click="toggleRequestView(false)">Pickup Request</button>
+		<button class="btn btn-default pull-left manage-job-btn deactivate map map-view-btn all-btn" ng-click="toggleRequestView(true)" ng-class="{'active primary-btn' : params.serviceRequest}">Service Request</button>
+	</div>
+
+	<!-- service request table -->
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active nopadding" ng-if="params.serviceRequest">
+		<table class="table quotes-table open-contract-table topmargin">
 			<thead>
 				<tr>
 					<th>Contract</th>
@@ -31,10 +70,7 @@
 						<a class="invoice-no">12345</a>
 						<p class="visible-xs">
 							<a class="invoice-no view-down view-down-quotation">
-							Pickup
-						</a>
-						<a class="invoice-no view-down view-down-quotation">
-							Service
+							Process
 						</a>
 						</p>
 					</td>
@@ -43,10 +79,78 @@
 					<td>MM/DD/YYYY</td>
 					<td class="text-right hidden-xs">
 						<a class="invoice-no view-down view-down-quotation">
-							Pickup
+							Process
 						</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
+	<!-- pickup request table -->
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active nopadding" ng-if="!params.serviceRequest">
+		<table class="table quotes-table open-contract-table topmargin">
+			<thead>
+				<tr>
+					<th>Contract</th>
+					<th>Job Site</th>
+					<th>PO</th>
+					<th>Date</th>
+					<th class="hidden-xs"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>
+						<a class="invoice-no">12345</a>
+						<p class="visible-xs">
+							<a class="invoice-no view-down view-down-quotation">
+							Process
+						</a>
+						</p>
+					</td>
+					<td>Calcrete Yard</td>
+					<td>Shop</td>
+					<td>MM/DD/YYYY</td>
+					<td class="text-right hidden-xs">
 						<a class="invoice-no view-down view-down-quotation">
-							Service
+							Process
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="invoice-no">12345</a>
+						<p class="visible-xs">
+							<a class="invoice-no view-down view-down-quotation">
+							Process
+						</a>
+						</p>
+					</td>
+					<td>Calcrete Yard</td>
+					<td>Shop</td>
+					<td>MM/DD/YYYY</td>
+					<td class="text-right hidden-xs">
+						<a class="invoice-no view-down view-down-quotation">
+							Process
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="invoice-no">12345</a>
+						<p class="visible-xs">
+							<a class="invoice-no view-down view-down-quotation">
+							Process
+						</a>
+						</p>
+					</td>
+					<td>Calcrete Yard</td>
+					<td>Shop</td>
+					<td>MM/DD/YYYY</td>
+					<td class="text-right hidden-xs">
+						<a class="invoice-no view-down view-down-quotation">
+							Process
 						</a>
 					</td>
 				</tr>
