--- a/src/app/team/team.html
+++ b/src/app/team/team.html
@@ -15,81 +15,74 @@
 			<a ui-sref="hm.contactUs" class="btn sell-equ all-btn">Contact Us</a>
 		</div>
 		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 description-col lr-padding">
-      <div ng-show="teamFetchInProgress">
-        <load-indicator loading="teamFetchInProgress"></load-indicator>
-      </div>
-      <div ng-style="{'visibility': teamFetchInProgress ? 'hidden':'visible'}">
+			<div ng-show="teamFetchInProgress">
+				<load-indicator loading="teamFetchInProgress"></load-indicator>
+			</div>
+			<div ng-style="{'visibility': teamFetchInProgress ? 'hidden':'visible'}">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding" ng-repeat="member in team" ng-if="$index % 2 == 0" >
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <uib-accordion close-others="true" >
-            <uib-accordion-group class="team-accordion-group" >
-              <uib-accordion-heading>
-                <a href="" class="thumbnail">
-                  <img src="../assets/images/avtar.png" alt="Team Picture">
-                </a>
-                <h3>{{team[$index].Name}}</h3>
-                <p>{{team[$index].Designation}}</p>
-                <p>{{team[$index].Team_name}}</p>
-                <div class="social-share">
-                  <a href="">
-                    <i class="fa fa-facebook"></i> &nbsp  &nbsp
-                  </a>
-                  <a href="">
-                    <i class="fa fa-linkedin"></i> &nbsp  &nbsp
-                  </a>
-                  <a href="">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </div>
-                <br>
-                <br>
-              </uib-accordion-heading>
-              <div ng-bind-html="team[$index].Description"></div>
-            </uib-accordion-group>
-          </uib-accordion>
-        </div>
-
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" ng-if="team[$index + 1]">
-            <uib-accordion close-others="true" >
-              <uib-accordion-group class="team-accordion-group" >
-                <uib-accordion-heading>
-                  <a href="" class="thumbnail">
-                    <img src="../assets/images/avtar.png" alt="Team Picture">
-                  </a>
-                  <h3>{{team[$index + 1].Name}}</h3>
-                  <p>{{team[$index + 1].Designation}}</p>
-                  <p>{{team[$index + 1 ].Team_name}}</p>
-                  <div class="social-share">
-                    <a href="">
-                      <i class="fa fa-facebook"></i> &nbsp  &nbsp
-                    </a>
-                    <a href="">
-                      <i class="fa fa-linkedin"></i> &nbsp  &nbsp
-                    </a>
-                    <a href="">
-                      <i class="fa fa-twitter"></i>
-                    </a>
-                  </div>
-                  <br>
-                  <br>
-                </uib-accordion-heading>
-                <div ng-bind-html="team[$index + 1].Description"></div>
-              </uib-accordion-group>
-            </uib-accordion>
-          </div>
-        </div>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<div class="team-accordion-group" >
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<a href="" class="thumbnail">
+								<img src="../assets/images/avtar.png" alt="Team Picture">
+							</a>
+							<h3>{{team[$index].Name}}</h3>
+							<p>{{team[$index].Designation}}</p>
+							<p>{{team[$index].Team_name}}</p>
+							<div class="social-share">
+								<a href="">
+									<i class="fa fa-facebook"></i> &nbsp  &nbsp
+								</a>
+								<a href="">
+									<i class="fa fa-linkedin"></i> &nbsp  &nbsp
+								</a>
+								<a href="">
+									<i class="fa fa-twitter"></i>
+								</a>
+							</div>
+						</div>
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 team-description" ng-bind-html="team[$index].Description"></div>
+					</div>
+				</div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider-bottom separator visible-sm visible-xs"></div>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" ng-if="team[$index + 1]">
+					<div class="team-accordion-group" >
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<a href="" class="thumbnail">
+								<img src="../assets/images/avtar.png" alt="Team Picture">
+							</a>
+							<h3>{{team[$index + 1].Name}}</h3>
+							<p>{{team[$index + 1].Designation}}</p>
+							<p>{{team[$index + 1 ].Team_name}}</p>
+							<div class="social-share">
+								<a href="">
+									<i class="fa fa-facebook"></i> &nbsp  &nbsp
+								</a>
+								<a href="">
+									<i class="fa fa-linkedin"></i> &nbsp  &nbsp
+								</a>
+								<a href="">
+									<i class="fa fa-twitter"></i>
+								</a>
+							</div>
+						</div>
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 team-description" ng-bind-html="team[$index + 1].Description"></div>
+					</div>
+				</div>
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider-bottom separator"></div>
 			</div>
 		</div>
-		<div class="col-lg-3 col-md-3 col-sm-3 hidden-xs">
-			<ul class="list-group user-list-group about-dropdown">
-					<li class="list-group-item noborder active-about" ui-sref="hm.team"><a class="nopadding" role="menuitem" tabindex="-1" href="">Team</a></li>
-					<li class="list-group-item noborder" ui-sref="hm.boardOfDirectors"><a class="nopadding" role="menuitem" tabindex="-1" href="">Board of Directors</a></li>
-					<li class="list-group-item noborder" ui-sref="hm.faq"><a class="nopadding" role="menuitem" tabindex="-1" href="">FAQ</a></li>
-					<li class="list-group-item noborder" ui-sref="hm.pressReleases"><a class="nopadding" role="menuitem" tabindex="-1" href="">Press Releases</a></li>
-					<li class="list-group-item noborder" ui-sref="hm.financialReports"><a class="nopadding" role="menuitem" tabindex="-1" href="">Financial Reports</a></li>
-					<li class="list-group-item noborder" ui-sref="hm.annualMeeting"><a class="nopadding" role="menuitem" tabindex="-1" href="">2015 Annual Meeting</a></li>
-					<li class="list-group-item noborder" ui-sref="hm.contactUs"><a class="nopadding" role="menuitem" tabindex="-1" href="">Contact Us</a></li>
-			</ul>
-		</div>
 	</div>
+	<div class="col-lg-3 col-md-3 col-sm-3 hidden-xs">
+		<ul class="list-group user-list-group about-dropdown">
+			<li class="list-group-item noborder active-about" ui-sref="hm.team"><a class="nopadding" role="menuitem" tabindex="-1" href="">Team</a></li>
+			<li class="list-group-item noborder" ui-sref="hm.boardOfDirectors"><a class="nopadding" role="menuitem" tabindex="-1" href="">Board of Directors</a></li>
+			<li class="list-group-item noborder" ui-sref="hm.faq"><a class="nopadding" role="menuitem" tabindex="-1" href="">FAQ</a></li>
+			<li class="list-group-item noborder" ui-sref="hm.pressReleases"><a class="nopadding" role="menuitem" tabindex="-1" href="">Press Releases</a></li>
+			<li class="list-group-item noborder" ui-sref="hm.financialReports"><a class="nopadding" role="menuitem" tabindex="-1" href="">Financial Reports</a></li>
+			<li class="list-group-item noborder" ui-sref="hm.annualMeeting"><a class="nopadding" role="menuitem" tabindex="-1" href="">2015 Annual Meeting</a></li>
+			<li class="list-group-item noborder" ui-sref="hm.contactUs"><a class="nopadding" role="menuitem" tabindex="-1" href="">Contact Us</a></li>
+		</ul>
+	</div>
+</div>
 </div>
